1999-10-24  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-ghttp-check.m4: this should be a better fix

1999-10-21  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-ghttp-check.m4: use a temp value until we know that
	ghttp exists.  This will hopefully fix building on Solaris 
	machines

1999-09-26  Jody Goldberg <jgoldberg@home.com>

	* compiler-flags.m4 : Remove -Wpointer-arith.  It generates large
	  numbers of warnings under glibc2.1.2 with a recent egcs release.
	  The glibc maintainers have suggested removing this flag because it
	  is useless.

1999-09-01  Havoc Pennington  <hp@pobox.com>

	* gnome-xml-check.m4: If you're going to AC_PATH_PROG then use the
	prog you find :-)	

1999-08-02  Peter Teichman  <pat4@acpub.duke.edu>

	* removed gnome-conduit-check.m4 - it should be distributed with
	gnome-pilot

1999-07-30  Peter Teichman  <pat4@acpub.duke.edu>

	* gnome-conduit-check.m4: added new file of checks. anything that
	provides a pilot conduit is going to want this

1999-07-07  Tuomas J. Lukka  <lukka@iki.fi>
	* gnome-x-checks.m4: add a comment on how to get gtk-1.3 and
	glib 1.3 from CVS

1999-07-06  Tuomas J. Lukka  <lukka@iki.fi>

	* gnome-x-checks.m4: forbid compiling with Gtk-1.3 for now.
        gnome only works with 1.2 so far. 

1999-07-05  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4: Make "extra library" message slightly easier to read.

Sat Jun 26 01:47:53 1999  Tim Janik  <timj@gtk.org>

	* compiler-flags.m4: give -Wunused to gcc instead of -Wno-unused.

1999-06-11  Tuomas J. Lukka <lukka@iki.fi>

	* gnome-guile-checks.m4: Debian has qt_null in -lqthreads but
 	  no main. Changed both checks for 'main' to qt_null.
	  I hope this is correct - it shouldn't break anything.

1999-05-11  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (MACROS): Add `gnome-bonobo-check.m4'.

1999-05-09  Jacob Berkman  <jberk+@cmu.edu>

	* gnome-bonobo-check.m4: made test program return 0,
	changed BONOBO_CHECK to not return "failure" on success
